Closed
Bug 1837688
Opened 2 years ago
Closed 2 years ago
Crash in [@ core::ptr::const_ptr::impl$2::eq] from CrashReporter::CreateMinidumpsAndPair
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
RESOLVED
FIXED
116 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox114 | --- | unaffected |
| firefox115 | --- | unaffected |
| firefox116 | + | fixed |
People
(Reporter: mccr8, Assigned: gsvelto)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/d09fe453-f535-41ac-8a05-6401b0230609
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames of crashing thread:
0 xul.dll core::ptr::const_ptr::impl$2::eq /rustc/84c898d65adf2f39a5a98507f1fe0ce10a2b8dbc/library/core/src/ptr/const_ptr.rs:1718
0 xul.dll thin_vec::ThinVec<mozannotation_server::CAnnotation>::is_singleton third_party/rust/thin-vec/src/lib.rs:1550
0 xul.dll thin_vec::impl$7::drop third_party/rust/thin-vec/src/lib.rs:1681
0 xul.dll core::ptr::drop_in_place /rustc/84c898d65adf2f39a5a98507f1fe0ce10a2b8dbc/library/core/src/ptr/mod.rs:490
0 xul.dll core::ptr::drop_in_place /rustc/84c898d65adf2f39a5a98507f1fe0ce10a2b8dbc/library/core/src/ptr/mod.rs:490
0 xul.dll mozannotation_server::mozannotation_free toolkit/crashreporter/mozannotation_server/src/lib.rs:59
1 xul.dll CrashReporter::CreateMinidumpsAndPair toolkit/crashreporter/nsExceptionHandler.cpp:3865
2 xul.dll mozilla::ipc::CrashReporterHost::GenerateMinidumpAndPair<mozilla::dom::ContentParent> ipc/glue/CrashReporterHost.h:73
3 xul.dll mozilla::dom::ContentParent::GeneratePairedMinidump dom/ipc/ContentParent.cpp:4470
4 xul.dll mozilla::dom::ContentParent::KillHard dom/ipc/ContentParent.cpp:4511
Not a great signature, but the ones I looked at were all like this.
The crashes I looked at had a Last Error Value of ERROR_PARTIAL_COPY.
It looks like this showed up in the 20230607214358 build. Here's the set of patches in that build. Regression from bug 1776197?
Flags: needinfo?(gsvelto)
| Reporter | ||
Updated•2 years ago
|
status-firefox116:
--- → affected
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1776197
status-firefox114:
--- → unaffected
status-firefox115:
--- → unaffected
status-firefox-esr102:
--- → unaffected
| Assignee | ||
Comment 2•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
Updated•2 years ago
|
tracking-firefox116:
--- → +
Pushed by gsvelto@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2f34ed785dca
Don't try to the free crash annotations if we failed to retrieve them r=afranchuk
Comment 4•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch
| Assignee | ||
Updated•2 years ago
|
Crash Signature: [@ core::ptr::const_ptr::impl$2::eq] → [@ core::ptr::const_ptr::impl$2::eq]
[@ thin_vec::ThinVec<T>::is_singleton]
Flags: needinfo?(gsvelto)
You need to log in
before you can comment on or make changes to this bug.
Description
•