Bug 1837688 - Don't try to the free crash annotations if we failed to retrieve them r=afranchuk

Differential Revision: https://phabricator.services.mozilla.com/D180524